<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="one_entry_hint_desc">Andlytics collects data over time. to see a meaningful chart come back as soon as more data is available.
        \n\nUsually download stats are updated every 24&#8211;48 hours.</string>
    <string name="crash_dialog_title">Sorry&#8230;</string>
    <string name="crash_desc">An unexpected error occurred.\n\nPlease help us to fix this by sending us error report data. Information about the error (stacktrace) and information about your device such as device manufacturer\'s name, device model number, operating system, etc. will be sent to help us identifying the problem.\n\nThanks!\n\n</string>
    <string name="crash_toast">An unexpected error occurred. Information about the error will be sent to help us identifying the problem.</string>
    <string name="crash_dont_show_again">Don\'t show this again</string>
    <string name="newversion_desc"><b>An unexpected error occurred, probably because the remote interface changed.</b>\n\nBut the good news is that a new version of Andlytics is available in the Android Market.\n\nPlease update before reporting this issue.\n\nThanks!\n\n\n</string>
    <string name="account_required">Please select the accounts that you wish to use with Andlytics.</string>
    <string name="account_choose">Accounts must be registered developer accounts with apps published on Google Play (\'Google Apps for Business\' and accounts linked to multiple developer consoles are not supported yet).</string>
    <string name="account_add">Add android developer account</string>
    <string name="logout">Logout</string>
    <string name="refresh">Refresh</string>
    <string name="comments">Comments</string>
    <string name="total_downloads">Total downloads</string>
    <string name="active_installs">Active installs</string>
    <string name="admob_revenue">AdMob revenue</string>
    <string name="admob_requests">AdMob requests</string>
    <string name="average_rating">Average rating</string>
    <string name="ratings">Ratings</string>
    <string name="appinfo">App Info</string>
    <string name="num_comments">comments</string>
    <string name="num_total_downloads">total downloads</string>
    <string name="num_active_installs">active installs</string>
    <string name="num_average_rating">average rating</string>
    <string name="num_ratings">ratings</string>
    <string name="auto_sync">Auto synchronization</string>
    <string name="notifications">Notifications</string>
    <string name="statistics_export">Statistics data export</string>
    <string name="statistics_import">Statistics data import</string>
    <string name="apps_hide">Select apps to hide</string>
    <string name="feedback">Send feedback</string>
    <string name="settings">Settings</string>
    <string name="downloads">Downloads</string>
    <string name="close">Close</string>
    <string name="rating_changes">Rating changes</string>
    <string name="comment_changes">Comment changes</string>
    <string name="download_changes">Download changes</string>
    <string name="notification_trigger">Notification trigger</string>
    <string name="notification_signal">Notification signal</string>
    <string name="notification_sound">Notification sound</string>
    <string name="notification_light">Notification light</string>
    <string name="apps_notification">Apps for change notification</string>
    <string name="select_files_import">Select packages to import</string>
    <string name="data_replaced">Existing data will be replaced</string>
    <string name="run_import">Run import</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="title">Title</string>
    <string name="text">Text</string>
    <string name="select_files_export">Select apps to export</string>
    <string name="export_files_replaced">Existing export files will be replaced</string>
    <string name="run_export">Run export</string>
    <string name="comment_no_user_info">A Google User</string>
    <string name="comment_reply">Developer reply</string>
    <string name="reply_to_comment">Reply to comment</string>
    <string name="reply_to_comment_max_characters">of 350 characters</string>
    <string name="reply_sent">Comment reply sent. It will appear/update in the comment list shortly.</string>
    <string name="long_click_translate">Long click on comment for translation</string>
    <string name="load_more_comments">Load more comments</string>
    <string name="info_comments">The number of comments reported on the main screen may be higher than the number of comments shown here because of withdrawn / changed comments.</string>
    <string name="no_comments_found">No comments found</string>
    <string name="no_links_found">No links found</string>
    <string name="time_frame">Time frame</string>
    <string name="seven_days">Last 7 days</string>
    <string name="thirty_days">Last 30 days</string>
    <string name="ninety_days">Last 90 days</string>
    <string name="unlimited">Unlimited</string>
    <string name="month_to_date">Month to Date</string>
    <string name="date_format">Date format</string>
    <string name="locale_default">Locale default</string>
    <string name="ddmmyy">Day/Month/Year</string>
    <string name="yymmdd">Year/Month/Day</string>
    <string name="mmddyy">Month/Day/Year</string>
    <string name="smooth_values">Smooth values</string>
    <string name="smoothed_values">* smoothed values</string>
    <string name="info_smooth">Smooth values for the downloads and active installs charts</string>
    <string name="auto_sync_period">Auto synchronization period</string>
    <string name="admob_login">ADMOB ACCOUNT LOGIN</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="remove_admob">Remove AdMob</string>
    <string name="loading_site">Loading site list&#8230;</string>
    <string name="select_admob_site">Select AdMob site to associate with this app</string>
    <string name="choose_app">Choose your app</string>
    <string name="admob_required">AdMob account required</string>
    <string name="admob_add">Add AdMob account</string>
    <string name="admob_info">For AdMob accounts that are linked to a Google account you can find the API password on the admob account information page:</string>
    <string name="percentage">Percentage</string>
    <string name="daily">Daily changes</string>
    <string name="downloads_day">Downloads by day</string>
    <string name="active_installs_percent">Active installs in percent</string>
    <string name="swipe">Swipe to see next chart -></string>
    <string name="admob">AdMob</string>
    <string name="admob__revenue">Revenue</string>
    <string name="admob__epc">epc</string>
    <string name="admob__requests">Requests</string>
    <string name="admob__clicks">Clicks</string>
    <string name="admob__fill_rate">Fill rate</string>
    <string name="admob__eCPM">eCPM</string>
    <string name="admob__impressions">Impressions</string>
    <string name="admob__CTR">CTR</string>
    <string name="admob__house_ad_clicks">House ad clicks</string>
    <string name="admob__charts_available">AdMob charts available</string>
    <string name="last_update">Last update</string>
    <string name="changelog_title">Changelog</string>
    <string name="changelog_thanks">Thank you for installing Andlytics!</string>
    <string name="notification_title">Andlytics change detection</string>
    <string name="import_">Import</string>
    <string name="import_no_sdcard_or_file">SD-Card not mounted or invalid file format, can\'t import!</string>
    <string name="import_no_stats_file">Stats file not found: <xliff:g id="fileName">%1$s</xliff:g></string>
    <string name="import_no_app">No app selected, can\'t import!</string>
    <string name="importing">Importing</string>
    <string name="import_started">Import started.</string>
    <string name="import_finished">Import finished.</string>
    <string name="imported_apps">Imported <xliff:g example="23" id="appsCount">%d</xliff:g> apps.</string>
    <string name="import_error">Error during import.</string>
    <string name="import_confirm_dialog_title">Confirm import</string>
    <string name="import_confirm_dialog_message">You already have stats for <xliff:g example="23" id="appsCount">%d</xliff:g> apps. Importing will overwrite them. Continue with import?</string>
    <string name="export_">Export</string>
    <string name="export_no_sdcard">SD-Card not mounted, can\'t export!</string>
    <string name="export_no_app">No app selected, can\'t export!</string>
    <string name="export_started">Export started.</string>
    <string name="export_finished">Export finished.</string>
    <string name="export_failed_to_load_stats">Failed to load app stats.</string>
    <string name="export_saved_to">Saved to</string>
    <string name="export_confirm_dialog_title">Confirm export</string>
    <string name="export_confirm_dialog_message">An export file \'<xliff:g example="andlytics.zip" id="fileName">%s</xliff:g>\' already exits. Exporting app stats will overwrite it. Continue with export?</string>
    <string name="share">Share</string>
    <string name="manage_accounts">Manage accounts</string>
    <string name="preferences">Preferences</string>
    <string name="loading_app_list">Loading app list…</string>
    <string name="no_published_apps">No published apps found</string>
    <string name="general_preferences">General preferences</string>
    <string name="account_specific_preferences">Account specific preferences</string>
    <string name="notification_when_account_visible">When app is visible</string>
    <string name="notification_when_account_visible_summary">Show notifications for the current account even when the app is visible</string>
    <string name="hide_admob">Hide AdMob</string>
    <string name="hide_admob_for_unconfigured_apps">Hide the AdMob tab for unconfigured apps</string>
    <string name="pref_disable_acra">Automatic error reports</string>
    <string name="pref_acra_disabled">Reporting disabled</string>
    <string name="pref_acra_enabled">Reporting enabled</string>
    <string name="use_google_translate_app">Use Google Translate</string>
    <string name="use_google_translate_app_summary">Use the Google Translate app for translating comments, when available.</string>
    <string name="show_comment_auto_translations">Auto translate comments</string>
    <string name="show_comment_auto_translations_summary">Show automatic translations from Google Play</string>
    <string name="network_error">A network error has occurred. Please try again later</string>
    <string name="signup_error"><xliff:g id="accountName">%1$s</xliff:g> is not an android developer account, sign up at:\n\n <xliff:g id="uri">%2$s</xliff:g></string>
    <string name="auth_error">Authentication failed for: <xliff:g id="accountName">%1$s</xliff:g></string>
    <string name="app_access_blocked_error">Not allowed to access apps for: <xliff:g id="accountName">%1$s</xliff:g></string>
    <string name="auth_error_open_browser">Additional authentication required. Tap to login via browser.</string>
    <string name="admob_ratelimit_error">Can\'t load Admob data because Admob has restricted the number of requests from this app, try again later</string>
    <string name="admob_missing_error">AdMob account <xliff:g id="accountName">%1$s</xliff:g> is missing. If this happens repeatedly try moving Andlytics from SD card to internal storage</string>
    <string name="admob_invalid_request_error">Error while requesting AdMob API</string>
    <string name="use_new_admob">Use new AdMob</string>
</resources>