<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/preferences" >

    <!--
    If we add more preferences, it would probably be best to move general preferences
	to a new activity
	-->

    <PreferenceCategory android:title="@string/general_preferences" >
        <ListPreference
            android:defaultValue="180"
            android:dialogTitle="@string/auto_sync_period"
            android:entries="@array/autosync_periods"
            android:entryValues="@array/autosync_periods_values"
            android:key="autosync.period"
            android:title="@string/auto_sync" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="admob.hide_for_unconfigured_apps"
            android:summary="@string/hide_admob_for_unconfigured_apps"
            android:title="@string/admob" />

        <Preference
            android:icon="@drawable/icon_notification"
            android:title="@string/notifications" >
            <intent
                android:action="android.intent.action.VIEW"
                android:targetClass="com.github.andlyticsproject.NotificationPreferenceActivity"
                android:targetPackage="com.github.andlyticsproject" />
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="prefCatAccountSpecific"
        android:title="@string/account_specific_preferences" >
    </PreferenceCategory>

</PreferenceScreen>