<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/notifications" >

    <PreferenceCategory android:title="@string/notification_trigger" 
        android:key="prefCatNotificationTrigger">
        <!-- Actual preferences are added in java as their key contains the account name -->
        <!-- CheckBoxPreference
            android:defaultValue="true"
            android:title="@string/rating_changes" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:title="@string/comment_changes" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:title="@string/download_changes" /-->
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/notification_signal" 
        android:key="prefCatNotificationSignal">
        <!-- CheckBoxPreference
            android:defaultValue="true"
            android:title="@string/notification_sound" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:title="@string/notification_light" /-->
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/apss_notification" 
        android:key="prefCatNotificationApps">
    </PreferenceCategory>

</PreferenceScreen>