<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#eeeeee" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <TextView
                android:id="@+id/base_chart_config_headline_text"
                style="@style/ChartConfigText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:text="@string/time_frame"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/base_chart_config_timeframe_radios"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/base_chart_config_headline_text"
                android:orientation="vertical" >

                <RadioButton
                    android:id="@+id/base_chart_config_ratio_last_seven_days"
                    style="@style/ChartConfigText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/seven_days" >
                </RadioButton>

                <RadioButton
                    android:id="@+id/base_chart_config_ratio_last_thrity_days"
                    style="@style/ChartConfigText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/thirty_days" >
                </RadioButton>

                <RadioButton
                    android:id="@+id/base_chart_config_ratio_last_ninety_days"
                    style="@style/ChartConfigText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/ninety_days" >
                </RadioButton>

                <RadioButton
                    android:id="@+id/base_chart_config_ratio_last_unlimited"
                    style="@style/ChartConfigText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/unlimited" >
                </RadioButton>
            </RadioGroup>

            <LinearLayout
                android:id="@+id/base_extra_config"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" 
                android:orientation="vertical"
			    android:layout_below="@+id/base_chart_config_timeframe_radios"
                />
        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/base_chart_config_done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_background"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="2dp"
            android:visibility="visible" >

            <TextView
                android:id="@+id/main_autosync_text"
                style="@style/ChartConfigText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/close" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>