<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="fill_parent"
	android:layout_width="fill_parent">
	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:background="@color/andBackground">

		<RelativeLayout
			xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:padding="10dp">

			<TextView
			    android:id="@+id/admob_config_2_headline_text"
			    style="@style/MainTableText"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:paddingBottom="5dp"
			    android:text="@string/choose_app"
			    android:textStyle="bold" />

			<TextView
			    android:id="@+id/admob_config_2_headline_subtext"
			    style="@style/MainTableText"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_below="@+id/admob_config_2_headline_text"
			    android:paddingBottom="5dp"
			    android:text="@string/select_admob_site" />

			<View
				android:layout_below="@+id/admob_config_2_headline_subtext"
				android:id="@+id/admob_config_2_buttonbarSpacer"
				android:layout_width="fill_parent"
				android:layout_height="2dp"
				android:background="#dadada"
				android:paddingLeft="5dp"
				android:paddingRight="5dp"
				android:layout_marginTop="10dp"
				android:layout_marginBottom="10dp" />


			<LinearLayout
				android:layout_below="@+id/admob_config_2_buttonbarSpacer"
				android:id="@+id/admob_sitelist"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:layout_marginBottom="20dp">
	
				<TextView
				    style="@style/MainTableText"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_gravity="center"
				    android:text="@string/loading_site" />
				
			</LinearLayout>


		</RelativeLayout>

	</ScrollView>
	<RelativeLayout
		android:layout_height="wrap_content"
		android:id="@+id/admob_config_2_done_button"
		android:background="@drawable/button_background"
		android:layout_width="wrap_content"
		android:layout_alignParentRight="true"
		android:padding="10dp"
		android:layout_marginTop="10dp"
		android:layout_marginRight="5dp"
		android:visibility="gone">

		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:visibility="visible"
			android:paddingLeft="20dp"
			android:paddingRight="20dp"
			android:paddingBottom="2dp"
			android:paddingTop="2dp">

			<TextView
				style="@style/MainTableText"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:text="close" />
		</LinearLayout>
	</RelativeLayout>
</RelativeLayout>
