
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_alignParentBottom="true"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:id="@+id/tabbar_buttonbar"
	android:orientation="horizontal"
	android:background="#b4d17a">


	<RelativeLayout
		android:id="@+id/tabbar_button_comments"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:layout_weight="1"
		android:padding="2dp"
		android:background="@drawable/tabbar_button">

		<LinearLayout
			android:layout_centerVertical="true"
			android:layout_centerHorizontal="true"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<ImageView
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:src="@drawable/icon_comments"
				android:layout_gravity="center_horizontal" />

			<TextView
			    style="@style/MainTableText"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="center_horizontal"
			    android:text="@string/comments"
			    android:textColor="#fff"
			    android:textSize="11dp"
			    android:textStyle="bold" />

		</LinearLayout>

	</RelativeLayout>
	<View
		android:layout_height="fill_parent"
		android:layout_width="1dp"
		android:background="#fff" />


	<RelativeLayout
		android:id="@+id/tabbar_button_ratings"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:layout_weight="1"
		android:padding="2dp"
		android:background="@drawable/tabbar_button">

		<LinearLayout
			android:layout_centerVertical="true"
			android:layout_centerHorizontal="true"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<ImageView
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:layout_gravity="center_horizontal" android:src="@drawable/icon_star"/>

			<TextView
			    style="@style/MainTableText"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="center_horizontal"
			    android:text="@string/ratings"
			    android:textColor="#fff"
			    android:textSize="11dp"
			    android:textStyle="bold" />

		</LinearLayout>

	</RelativeLayout>


	<View
		android:layout_height="fill_parent"
		android:layout_width="1dp"
		android:background="#fff" />

	<RelativeLayout
		android:id="@+id/tabbar_button_downloads"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:layout_weight="1"
		android:padding="2dp"
		android:background="@drawable/tabbar_button">

		<LinearLayout
			android:layout_centerVertical="true"
			android:layout_centerHorizontal="true"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<ImageView
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:layout_gravity="center_horizontal" android:src="@drawable/icon_downloads"/>

			<TextView
			    style="@style/MainTableText"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="center_horizontal"
			    android:text="@string/downloads"
			    android:textColor="#fff"
			    android:textSize="11dp"
			    android:textStyle="bold" />

		</LinearLayout>

	</RelativeLayout>

	<View
		android:layout_height="fill_parent"
		android:layout_width="1dp"
		android:background="#fff" />



	<RelativeLayout
		android:id="@+id/tabbar_button_back"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:layout_weight="1"
		android:padding="2dp"
		android:background="@drawable/tabbar_button">

		<LinearLayout
			android:layout_centerVertical="true"
			android:layout_centerHorizontal="true"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<ImageView
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:layout_gravity="center_horizontal" android:src="@drawable/icon_admob"/>

			<TextView
				android:textStyle="bold"
				style="@style/MainTableText"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="#fff"
				android:textSize="11dp"
				android:layout_gravity="center_horizontal"
				android:text="@string/admob" />
		</LinearLayout>

	</RelativeLayout>


</LinearLayout>
