<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	android:id="@+id/LinearLayout01"
	android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="#aa000000"
	android:layout_width="fill_parent">

	<LinearLayout
		android:id="@+id/LinearLayout01"
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical"
		android:gravity="center"
		android:layout_width="fill_parent"
		android:layout_weight="2"
		android:background="#00000000"
		android:layout_height="fill_parent">
	</LinearLayout>


	<RelativeLayout
		android:layout_width="fill_parent"
		android:id="@+id/RelativeLayout01"
		android:background="#ddF7FBF5"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true">


		<TextView
		    android:id="@+id/info_dialog_title"
		    style="@style/MainTableText"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:paddingBottom="10dp"
		    android:paddingLeft="20dp"
		    android:paddingRight="30dp"
		    android:paddingTop="10dp"
		    android:text="@string/title"
		    android:textSize="20dp"
		    android:textStyle="bold" >
</TextView>

		<TextView
		    android:id="@+id/info_dialog_text"
		    style="@style/MainTableText"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/info_dialog_title"
		    android:paddingBottom="10dp"
		    android:paddingLeft="20dp"
		    android:paddingRight="20dp"
		    android:paddingTop="10dp"
		    android:text="@string/text" >
</TextView>

		<LinearLayout
			android:id="@+id/info_dialog_buttonbar"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_below="@+id/info_dialog_text"
			android:paddingTop="10dp">

			<RelativeLayout
				android:id="@+id/info_dialog_positive_button"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:layout_weight="1"
				android:background="@drawable/image_button"
				android:layout_margin="5dp"
				android:padding="5dp">

				<ImageView
					android:layout_height="wrap_content"
					android:src="@drawable/icon_logout"
					android:layout_width="wrap_content"
					android:paddingRight="5dp"
					android:visibility="invisible"></ImageView>
				<LinearLayout
					android:orientation="horizontal"
					android:layout_centerVertical="true"
					android:layout_centerHorizontal="true"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content">


					<TextView
					    android:id="@+id/info_dialog_positive_button_text"
					    style="@style/MainTableText"
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
					    android:layout_gravity="center"
					    android:text="@string/ok"
					    android:textColor="#fff"
					    android:textStyle="bold" />

				</LinearLayout>

			</RelativeLayout>



			<RelativeLayout
				android:id="@+id/info_dialog_negative_button"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:layout_weight="1"
				android:background="@drawable/image_button"
				android:layout_margin="5dp"
				android:padding="5dp">

				<ImageView
					android:layout_height="wrap_content"
					android:src="@drawable/icon_logout"
					android:layout_width="wrap_content"
					android:paddingRight="5dp"
					android:visibility="invisible"></ImageView>

				<LinearLayout
					android:orientation="horizontal"
					android:layout_centerVertical="true"
					android:layout_centerHorizontal="true"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content">


					<TextView
					    android:id="@+id/info_dialog_negative_button_text"
					    style="@style/MainTableText"
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
					    android:layout_gravity="center"
					    android:text="@string/cancel"
					    android:textColor="#fff"
					    android:textStyle="bold" />

				</LinearLayout>

			</RelativeLayout>


		</LinearLayout>

		<EditText
			android:text=""
			android:id="@+id/info_dialog_input"
			android:layout_below="@+id/info_dialog_buttonbar"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:minLines="5"></EditText>




		<View
			android:layout_height="2dp"
			android:layout_width="fill_parent"
			android:background="#dadada" />

		<View
			android:layout_below="@+id/info_dialog_title"
			android:layout_height="2dp"
			android:layout_width="fill_parent"
			android:background="#dadada" />



		

	</RelativeLayout>
</RelativeLayout>
